--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ flask==2.3.2
 flask_sqlalchemy==3.1.1
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.28.1
-flask_marshmallow==0.14.0
 pymysql==1.1.0
+setuptools==58.1.0
 gunicorn
