--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-flask==2.3.2
-flask_sqlalchemy==3.1.1
-flask-marshmallow==0.15.0
+Flask==2.3.2
+Flask-SQLAlchemy==3.1.1
+Flask-Marshmallow==0.15.0
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.28.1
-pymysql==1.1.0
-setuptools==58.1.0
-gunicorn==23.0.0
+PyMySQL==1.1.0
 Flask-JWT-Extended==4.5.2
-flask-cors==4.0.0
+Flask-Cors==4.0.0
+Flask-Bcrypt==1.0.1
+gunicorn==23.0.0
+setuptools==68.0.0
